Fixed Scrollbar Not Appearing On Mobile Devices

--- a/index.css
+++ b/index.css
@@ -269,6 +269,11 @@ p {
         width: 100%;
         top: initial;
     }
+
+    .panel {
+        height: 80vh;
+        overflow-y: scroll;
+    }
 }
 
 @media screen and (max-width: 500px) {
